src/test/ui/dyn-star/feature-gate-dyn_star.stderr
error[E0658]: dyn* trait objects are unstable
  --> $DIR/feature-gate-dyn_star.rs:5:31
   |
LL | pub fn dyn_star_parameter(_: &dyn* Send) {
   |                               ^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = help: add `#![feature(dyn_star)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
